--- a/index.html
+++ b/index.html
@@ -4,291 +4,328 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BabyTrump</title>
+  <title>Baby-Trump-VIP</title>
+  <link rel="icon" type="image/x-icon" href="assets/Favicon.png">
   <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Reset & Base Styles */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
 
-<style>/* Reset & Base Styles */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-body {
-  background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-  color: #fff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
+    body {
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
 
-/* Header */
-header {
-  text-align: center;
-  padding: 3rem 1rem;
-}
-.logo {
-  width: 100px;
-  /* animation: spin 10s linear infinite; */
-}
-h1 {
-  font-size: 3rem;
-  color: #ffcc00;
-  margin: 1rem 0;
-}
-p {
-  font-size: 1.2rem;
-  color: #eee;
-  max-width: 600px;
-  margin: 0 auto;
-}
+    /* Header */
+    header {
+      text-align: center;
+      padding: 3rem 1rem;
+    }
 
-/* Button */
-#mint-button {
-  margin-top: 2rem;
-  padding: 1rem 2rem;
-  background: linear-gradient(45deg, #ff00cc, #3333ff);
-  color: white;
-  border: none;
-  border-radius: 12px;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: transform 0.2s ease;
-}
-#mint-button:hover {
-  transform: scale(1.05);
-}
+    .logo {
+      width: 100px;
+      /* animation: spin 10s linear infinite; */
+    }
 
-/* Info Sections */
-main {
-  width: 100%;
-  max-width: 960px;
-  padding: 2rem;
-}
-.info-section {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 2rem 0;
-  align-items: center;
-  justify-content: space-between;
-}
-.info-text {
-  flex: 1 1 400px;
-}
-.info-text h2 {
-  color: #ffcc00;
-  margin-bottom: 1rem;
-}
-.info-text ul {
-  list-style: none;
-}
-.info-text li {
-  margin: 0.5rem 0;
-  line-height: 1.5;
-  border-left: 3px solid #ff00cc;
-  padding-left: 1rem;
-}
+    h1 {
+      font-size: 3rem;
+      color: #ffcc00;
+      margin: 1rem 0;
+    }
 
-/* Animated Visuals */
-.info-visual img {
-  width: 120px;
-}
-.spin {
-  animation: spin 10s linear infinite;
-}
-.bounce {
-  animation: bounce 2s infinite;
-}
-@keyframes spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-@keyframes bounce {
-  0%, 100% { transform: translateY(0); }
-  50% { transform: translateY(-20px); }
-}
+    p {
+      font-size: 1.2rem;
+      color: #eee;
+      max-width: 600px;
+      margin: 0 auto;
+    }
 
-/* Footer */
-footer {
-  text-align: center;
-  padding: 2rem 0;
-}
-.footer-buttons img {
-  width: 32px;
-  margin: 0 10px;
-  transition: transform 0.2s ease;
-}
-.footer-buttons img:hover {
-  transform: scale(1.2);
-}
+    /* Button */
+    #mint-button {
+      margin-top: 2rem;
+      padding: 1rem 2rem;
+      background: linear-gradient(45deg, #ff00cc, #3333ff);
+      color: white;
+      border: none;
+      border-radius: 12px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: transform 0.2s ease;
+    }
 
-/* Music Toggle */
-#music-toggle {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background: #111;
-  border-radius: 50%;
-  padding: 12px;
-  cursor: pointer;
-  box-shadow: 0 0 10px #ff00cc;
-}
-#music-icon {
-  width: 32px;
-}
+    #mint-button:hover {
+      transform: scale(1.05);
+    }
 
-/* Mobile Responsiveness */
-@media (max-width: 768px) {
-  h1 {
-    font-size: 2rem;
-  }
-  .info-section {
-    flex-direction: column;
-    text-align: center;
-  }
-  .info-visual img {
-    margin-top: 1rem;
-  }
-}
+    /* Info Sections */
+    main {
+      width: 100%;
+      max-width: 960px;
+      padding: 2rem;
+    }
 
+    .info-section {
+      display: flex;
+      flex-wrap: wrap;
+      margin: 2rem 0;
+      align-items: center;
+      justify-content: space-between;
+    }
 
-.footer-nav {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 2rem;
-}
+    .info-text {
+      flex: 1 1 400px;
+    }
 
-.footer-btn {
-  background: transparent;
-  border: none;
-  cursor: pointer;
-  padding: 20px;
-  border-radius: 12px;
-  transition: transform 0.3s ease;
- 
-}
-.footer-btn img {
-  width: 36px;
-  height: 36px;
-}
-.footer-btn:hover {
-  transform: scale(1.2);
-  background-color: rgba(255,255,255,0.1);
-}
+    .info-text h2 {
+      color: #ffcc00;
+      margin-bottom: 1rem;
+    }
 
-.hidden-panel {
-  max-width: 800px;
-  margin: 20px auto;
-  padding: 1rem 2rem;
-  background: #f52929;
-  color: #000000;
-  border-radius: 12px;
-  box-shadow: 0 0 12px rgba(255,255,255,0.2);
-  opacity: 0;
-  transform: scaleY(0);
-  transform-origin: top;
-  transition: all 0.4s ease;
-  display: none;
-}
-.hidden-panel.show {
-  opacity: 1;
-  transform: scaleY(1);
-  display: block;
-}
+    .info-text ul {
+      list-style: none;
+    }
+
+    .info-text li {
+      margin: 0.5rem 0;
+      line-height: 1.5;
+      border-left: 3px solid #ff00cc;
+      padding-left: 1rem;
+    }
+
+    /* Animated Visuals */
+    .info-visual img {
+      width: 120px;
+    }
+
+    .spin {
+      animation: spin 10s linear infinite;
+    }
+
+    .bounce {
+      animation: bounce 2s infinite;
+    }
+
+    @keyframes spin {
+      from {
+        transform: rotate(0deg);
+      }
+
+      to {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes bounce {
+
+      0%,
+      100% {
+        transform: translateY(0);
+      }
+
+      50% {
+        transform: translateY(-20px);
+      }
+    }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      padding: 2rem 0;
+    }
+
+    .footer-buttons img {
+      width: 32px;
+      margin: 0 10px;
+      transition: transform 0.2s ease;
+    }
+
+    .footer-buttons img:hover {
+      transform: scale(1.2);
+    }
+
+    /* Music Toggle */
+    #music-toggle {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #111;
+      border-radius: 50%;
+      padding: 12px;
+      cursor: pointer;
+      box-shadow: 0 0 10px #ff00cc;
+    }
+
+    #music-icon {
+      width: 32px;
+    }
+
+    /* Mobile Responsiveness */
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 2rem;
+      }
+
+      .info-section {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      .info-visual img {
+        margin-top: 1rem;
+      }
+    }
 
 
-.info-section {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  gap: 2rem;
-}
+    .footer-nav {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 2rem;
+    }
+
+    .footer-btn {
+      background: transparent;
+      border: none;
+      cursor: pointer;
+      padding: 20px;
+      border-radius: 12px;
+      transition: transform 0.3s ease;
+
+    }
+
+    .footer-btn img {
+      width: 36px;
+      height: 36px;
+    }
+
+    .footer-btn:hover {
+      transform: scale(1.2);
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+
+    .hidden-panel {
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 1rem 2rem;
+      background: #f52929;
+      color: #000000;
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
+      opacity: 0;
+      transform: scaleY(0);
+      transform-origin: top;
+      transition: all 0.4s ease;
+      display: none;
+    }
+
+    .hidden-panel.show {
+      opacity: 1;
+      transform: scaleY(1);
+      display: block;
+    }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-  header h1 {
-    font-size: 2rem;
-  }
-
-  .info-section {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .info-visual {
-    margin-top: 1rem;
-  }
-
-  #mint-button {
-    width: 80%;
-    font-size: 1rem;
-  }
-
-  .footer-buttons,
-  .footer-nav {
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-  }
-
-  .hidden-panel {
-    padding: 1rem;
-    font-size: 0.9rem;
-  }
-}
-
-
-.logo,
-button,
-.text-block {
-  max-width: 30vw;
-  width: 30vw;
-  box-sizing: border-box;
-}
-body {
-  font-size: 1rem; /* Base size */
-}
-
-h1 {
-  font-size: 2.5rem; /* Scales with root font */
-}
-
-p,
-li,
-button {
-  font-size: 1rem; /* Uniform and scalable */
-}
-@media (max-width: 768px) {
-  h1 {
-    font-size: 2rem;
-  }
-
-  p {
-    font-size: 0.9rem;
-  }
-}
+    .info-section {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+      gap: 2rem;
+    }
 
 
 
-</style>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 2rem;
+      }
+
+      .info-section {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      .info-visual {
+        margin-top: 1rem;
+      }
+
+      #mint-button {
+        width: 80%;
+        font-size: 1rem;
+      }
+
+      .footer-buttons,
+      .footer-nav {
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+      }
+
+      .hidden-panel {
+        padding: 1rem;
+        font-size: 0.9rem;
+      }
+    }
+
+
+    .logo,
+    button,
+    .text-block {
+      max-width: 30vw;
+      width: 30vw;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-size: 1rem;
+      /* Base size */
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      /* Scales with root font */
+    }
+
+    p,
+    li,
+    button {
+      font-size: 1rem;
+      /* Uniform and scalable */
+    }
+
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 2rem;
+      }
+
+      p {
+        font-size: 0.9rem;
+      }
+    }
+  </style>
 
 </head>
 
@@ -349,38 +386,40 @@ button {
       <a href="https://x.com/BabyTrumpVIP" target="_blank" title="Twitter"><img
           src="https://cdn-icons-png.flaticon.com/512/733/733579.png" /></a>
 
-         
-    </div>
- <pre> <div></div>
 
-  <div></div></pre>  
+    </div>
+    <pre> <div></div>
+
+  <div></div></pre>
     <p>&copy; 2025 BabyTrump Meme Network</p>
 
 
-<div class="footer-nav">
-  <!-- <button class="footer-btn" onclick="scrollToTop()" title="Home">
+    <div class="footer-nav">
+      <!-- <button class="footer-btn" onclick="scrollToTop()" title="Home">
     <img src="https://cdn-icons-png.flaticon.com/512/1946/1946488.png" alt="Home" />
   </button> -->
-   <button class="footer-btn" onclick="toggleAbout()" title="About">
-    <img src="https://cdn-icons-png.flaticon.com/512/869/869636.png" alt="About" />
-  </button>
-  <!-- <button class="footer-btn" onclick="toggleContact()" title="Contact Us">
+      <button class="footer-btn" onclick="toggleAbout()" title="About">
+        <img src="https://cdn-icons-png.flaticon.com/512/869/869636.png" alt="About" />
+      </button>
+      <!-- <button class="footer-btn" onclick="toggleContact()" title="Contact Us">
     <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Contact" />
   </button> -->
-  
-</div>
+
+    </div>
 
 
 
 
-<!-- Hidden Sections -->
-<div id="about-text" class="hidden-panel">
-  <p>
-    BabyTrump is a satirical and community-driven ERC-20 meme token that represents the power of memes in Web3. Born out of the spirit of internet culture, BabyTrump blends political humor with decentralized finance, aiming to be the next iconic meme token on the Ethereum network.
-  </p>
-</div>
+    <!-- Hidden Sections -->
+    <div id="about-text" class="hidden-panel">
+      <p>
+        BabyTrump is a satirical and community-driven ERC-20 meme token that represents the power of memes in Web3. Born
+        out of the spirit of internet culture, BabyTrump blends political humor with decentralized finance, aiming to be
+        the next iconic meme token on the Ethereum network.
+      </p>
+    </div>
 
-<!-- <div id="contact-info" class="hidden-panel">
+    <!-- <div id="contact-info" class="hidden-panel">
   <p><strong>Phone:</strong> +91-XXXXXXXXXX</p>
   <p><strong>Email:</strong> your@email.com</p>
 </div> -->
@@ -391,82 +430,82 @@ button {
 
   </footer>
 
-  <audio id="bg-music" src="assets/WhatsApp Audio 2025-07-31 at 10.37.37 AM.mpeg" preload="auto" autoplay ></audio>
+  <audio id="bg-music" src="assets/WhatsApp Audio 2025-07-31 at 10.37.37 AM.mpeg" preload="auto" autoplay></audio>
   <div id="music-toggle"><img id="music-icon" src="https://cdn-icons-png.flaticon.com/512/727/727245.png" /></div>
 
   <script src="script.js"></script>
 
   <script>
-// Mint button logic placeholder
-function startMint() {
-  alert("Minting session started for $BABYTRUMP! 🚀");
-  // You can integrate WalletConnect or Web3.js here later
-}
+    // Mint button logic placeholder
+    function startMint() {
+      alert("Minting session started for $BABYTRUMP! 🚀");
+      // You can integrate WalletConnect or Web3.js here later
+    }
 
-// Scroll to top
-function scrollToTop() {
-  window.scrollTo({ top: 0, behavior: 'smooth' });
-}
+    // Scroll to top
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
 
-// Music toggle
-const music = document.getElementById('bg-music');
-const musicIcon = document.getElementById('music-icon');
-const toggleBtn = document.getElementById('music-toggle');
-let isPlaying = false;
+    // Music toggle
+    const music = document.getElementById('bg-music');
+    const musicIcon = document.getElementById('music-icon');
+    const toggleBtn = document.getElementById('music-toggle');
+    let isPlaying = false;
 
-toggleBtn.addEventListener('click', () => {
-  if (isPlaying) {
-    music.pause();
-    musicIcon.src = 'https://cdn-icons-png.flaticon.com/512/727/727245.png';
-  } else {
-    music.play();
-    musicIcon.src = 'https://cdn-icons-png.flaticon.com/512/727/727234.png';
-  }
-  isPlaying = !isPlaying;
-});
+    toggleBtn.addEventListener('click', () => {
+      if (isPlaying) {
+        music.pause();
+        musicIcon.src = 'https://cdn-icons-png.flaticon.com/512/727/727245.png';
+      } else {
+        music.play();
+        musicIcon.src = 'https://cdn-icons-png.flaticon.com/512/727/727234.png';
+      }
+      isPlaying = !isPlaying;
+    });
 
-// Auto-play when page loads (optional)
-window.onload = () => {
-  // music.play(); // Uncomment if you want auto-play
-};
-
-
-
-  // function startMint() {
-  //   //const  mintButton = document.querySelector('button');
-  //   mintButton.textContent = "Session started";
-  //   mintButton.style.backgroundColor = "#4CAF50"; // Soft green success color
-  //   mintButton.style.transform = "scale(1)";
-  //   mintButton.disabled = true; // Optional: disable after click
-  //   alert("Minting session started! 🍼 This would connect your wallet and mint $BABYTRUMP.");
-  // }
-
-function startMint() {
-  const button = document.getElementById("mint-button");
-
-  // Change text and color
-  button.textContent = "Session started";
-  button.style.background = "linear-gradient(45deg, #00ff99, #00ccff)";
-  button.style.color = "#000";
-  button.style.border = "2px solid #fff";
-
-  // Optional: disable button to prevent double click
-  button.disabled = true;
-  button.style.cursor = "default";
-
-  alert("Minting session started for $BABYTRUMP! 🚀");
-}
+    // Auto-play when page loads (optional)
+    window.onload = () => {
+      // music.play(); // Uncomment if you want auto-play
+    };
 
 
-function toggleAbout() {
-  const panel = document.getElementById("about-text");
-  panel.classList.toggle("show");
-}
 
-function toggleContact() {
-  const panel = document.getElementById("contact-info");
-  panel.classList.toggle("show");
-}
+    // function startMint() {
+    //   //const  mintButton = document.querySelector('button');
+    //   mintButton.textContent = "Session started";
+    //   mintButton.style.backgroundColor = "#4CAF50"; // Soft green success color
+    //   mintButton.style.transform = "scale(1)";
+    //   mintButton.disabled = true; // Optional: disable after click
+    //   alert("Minting session started! 🍼 This would connect your wallet and mint $BABYTRUMP.");
+    // }
+
+    function startMint() {
+      const button = document.getElementById("mint-button");
+
+      // Change text and color
+      button.textContent = "Session started";
+      button.style.background = "linear-gradient(45deg, #00ff99, #00ccff)";
+      button.style.color = "#000";
+      button.style.border = "2px solid #fff";
+
+      // Optional: disable button to prevent double click
+      button.disabled = true;
+      button.style.cursor = "default";
+
+      alert("Minting session started for $BABYTRUMP! 🚀");
+    }
+
+
+    function toggleAbout() {
+      const panel = document.getElementById("about-text");
+      panel.classList.toggle("show");
+    }
+
+    function toggleContact() {
+      const panel = document.getElementById("contact-info");
+      panel.classList.toggle("show");
+    }
 
 
   </script>
