--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
     .logo {
       width: 100px;
+      border: #ff9900;
+      border-radius: 79px;
       /* animation: spin 10s linear infinite; */
     }
 
@@ -104,6 +106,7 @@
     /* Animated Visuals */
     .info-visual img {
       width: 120px;
+      border-radius: 27px;
     }
 
     .spin {
@@ -138,6 +141,7 @@
 
     /* Footer */
     footer {
+      
       text-align: center;
       padding: 2rem 0;
     }
@@ -146,6 +150,9 @@
       width: 32px;
       margin: 0 10px;
       transition: transform 0.2s ease;
+      border: 2px solid rgb(0, 0, 0);
+      border-radius: 8px;
+      background-color: rgb(200, 197, 255);
     }
 
     .footer-buttons img:hover {
@@ -153,7 +160,7 @@
     }
 
     /* Music Toggle */
-    #music-toggle {
+    #music-toggle { 
       position: fixed;
       bottom: 20px;
       right: 20px;
@@ -161,7 +168,7 @@
       border-radius: 50%;
       padding: 12px;
       cursor: pointer;
-      box-shadow: 0 0 10px #ff00cc;
+      box-shadow: 0 0 10px #e140c1;
     }
 
     #music-icon {
@@ -325,6 +332,49 @@
         font-size: 0.9rem;
       }
     }
+
+    /* link button whitepaper css */
+    .whitepaper-btn {
+  display: inline-block;
+  padding: 0.75em 1.5em;
+  font-size: 1rem;
+  font-weight: 600;
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #7af90a;
+  border-radius: 8px;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  margin: 1em auto;
+  text-align: center;
+}
+
+.whitepaper-btn:hover {
+  background-color: #fc3232;
+  color: #000000;
+  transform: scale(1.05);
+}
+
+.whitepaper-btn:active {
+  background-color: #86f64e;
+  transform: scale(0.98);
+  animation: bounce 0.4s ease;
+}
+
+/* Manual visited state */
+.whitepaper-btn.visited-manual {
+  background-color: #2a49f4;
+  color: #ffffff;
+}
+
+@keyframes bounce {
+  0%   { transform: scale(1); }
+  30%  { transform: scale(1.1); }
+  50%  { transform: scale(0.95); }
+  70%  { transform: scale(1.05); }
+  100% { transform: scale(1); }
+}
+
   </style>
 
 </head>
@@ -370,6 +420,15 @@
         <video src=""></video>
         <img src="assets/Baby Trump Coin.png" alt="MemeCoin Dance" class="bounce" />
       </div>
+      <a href="whitepaper.pdf.pdf" class="whitepaper-btn" id="whitepaperBtn" target="_blank" rel="noopener noreferrer" onclick="handleWhitepaperClick()">
+  📄 Read the Whitepaper
+</a>
+
+<audio id="trumpVoice" src="trump-voice.mp3" preload="auto"></audio>
+
+
+      <audio id="trumpVoice" src="trump-voice.mp3" preload="auto"></audio>
+
     </section>
   </main>
 
@@ -506,6 +565,32 @@
       const panel = document.getElementById("contact-info");
       panel.classList.toggle("show");
     }
+
+
+    // whitepaperjs
+  function handleWhitepaperClick() {
+    localStorage.setItem("whitepaperVisited", "true");
+    playTrumpVoice();
+  }
+
+  function playTrumpVoice() {
+    const audio = document.getElementById("trumpVoice");
+    if (audio) {
+      audio.currentTime = 0;
+      audio.play();
+    }
+  }
+
+  // On page load, check if visited
+  window.addEventListener("DOMContentLoaded", () => {
+    const btn = document.getElementById("whitepaperBtn");
+    if (localStorage.getItem("whitepaperVisited") === "true") {
+      btn.classList.add("visited-manual");
+    }
+  });
+
+
+
 
 
   </script>
