--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
   font-weight: 600;
   text-decoration: none;
   color: #ffffff;
-  background-color: #7af90a;
+  background-color: #91fa35;
   border-radius: 8px;
   transition: all 0.3s ease;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -363,7 +363,7 @@
 
 /* Manual visited state */
 .whitepaper-btn.visited-manual {
-  background-color: #2a49f4;
+  background-color: rgb(67, 67, 241);
   color: #ffffff;
 }
 
